--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -158,7 +158,9 @@ footer {
 }
 
 .participants-list {
-  margin-left: 18px;
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
   margin-bottom: 0;
   color: #333;
 }
@@ -167,4 +169,21 @@ footer {
   color: #888;
   font-style: italic;
   margin: 0;
+}
+
+/* Style for delete icon */
+.delete-participant {
+  display: inline-block;
+  margin-left: 8px;
+  color: #c62828;
+  cursor: pointer;
+  font-size: 16px;
+  background: none;
+  border: none;
+  vertical-align: middle;
+  transition: color 0.2s;
+}
+
+.delete-participant:hover {
+  color: #a31515;
 }
